src/tests/if_expression/snapshots/monkey_interpreter__tests__if_expression__test_if_expression_case_2_lexical_analysis.snap
---
source: src/tests/if_expression/mod.rs
assertion_line: 24
expression: tokens
---
[
    PositionedToken {
        token: If,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: OpeningRoundBracket,
        position: Position {
            line: 1,
            column: 4,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 10,
        },
        position: Position {
            line: 1,
            column: 5,
        },
    },
    PositionedToken {
        token: GreaterThan,
        position: Position {
            line: 1,
            column: 8,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 1,
        },
        position: Position {
            line: 1,
            column: 10,
        },
    },
    PositionedToken {
        token: ClosingRoundBracket,
        position: Position {
            line: 1,
            column: 11,
        },
    },
    PositionedToken {
        token: OpeningCurlyBracket,
        position: Position {
            line: 1,
            column: 13,
        },
    },
    PositionedToken {
        token: Return,
        position: Position {
            line: 1,
            column: 15,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 1,
        },
        position: Position {
            line: 1,
            column: 22,
        },
    },
    PositionedToken {
        token: Plus,
        position: Position {
            line: 1,
            column: 24,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 5,
        },
        position: Position {
            line: 1,
            column: 26,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 27,
        },
    },
    PositionedToken {
        token: ClosingCurlyBracket,
        position: Position {
            line: 1,
            column: 29,
        },
    },
    PositionedToken {
        token: Return,
        position: Position {
            line: 1,
            column: 31,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 1,
        },
        position: Position {
            line: 1,
            column: 38,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 39,
        },
    },
]
