src/tests/if_expression/snapshots/monkey_interpreter__tests__if_expression__test_if_expression_case_3_lexical_analysis.snap
---
source: src/tests/if_expression/mod.rs
assertion_line: 24
expression: tokens
---
[
    PositionedToken {
        token: If,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: OpeningRoundBracket,
        position: Position {
            line: 1,
            column: 4,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 1,
        },
        position: Position {
            line: 1,
            column: 5,
        },
    },
    PositionedToken {
        token: ClosingRoundBracket,
        position: Position {
            line: 1,
            column: 6,
        },
    },
    PositionedToken {
        token: OpeningCurlyBracket,
        position: Position {
            line: 1,
            column: 8,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 1,
        },
        position: Position {
            line: 1,
            column: 10,
        },
    },
    PositionedToken {
        token: ClosingCurlyBracket,
        position: Position {
            line: 1,
            column: 12,
        },
    },
]
