src/tests/if_expression/snapshots/monkey_interpreter__tests__if_expression__test_if_expression_case_3_syntax_analysis.snap
---
source: src/tests/if_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: If {
            condition: Integer {
                literal: 1,
            },
            consequence: Block {
                nodes: [
                    Expression {
                        expression: Integer {
                            literal: 1,
                        },
                    },
                ],
            },
            alternative: None,
        },
    },
]
