src/tests/if_expression/snapshots/monkey_interpreter__tests__if_expression__test_if_expression_case_4_lexical_analysis.snap
---
source: src/tests/if_expression/mod.rs
assertion_line: 24
expression: tokens
---
[
    PositionedToken {
        token: If,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: OpeningRoundBracket,
        position: Position {
            line: 1,
            column: 4,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 1,
        },
        position: Position {
            line: 1,
            column: 5,
        },
    },
    PositionedToken {
        token: LesserThan,
        position: Position {
            line: 1,
            column: 7,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 2,
        },
        position: Position {
            line: 1,
            column: 9,
        },
    },
    PositionedToken {
        token: ClosingRoundBracket,
        position: Position {
            line: 1,
            column: 10,
        },
    },
    PositionedToken {
        token: OpeningCurlyBracket,
        position: Position {
            line: 1,
            column: 12,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 4,
        },
        position: Position {
            line: 1,
            column: 14,
        },
    },
    PositionedToken {
        token: ClosingCurlyBracket,
        position: Position {
            line: 1,
            column: 16,
        },
    },
    PositionedToken {
        token: Else,
        position: Position {
            line: 1,
            column: 18,
        },
    },
    PositionedToken {
        token: OpeningCurlyBracket,
        position: Position {
            line: 1,
            column: 23,
        },
    },
    PositionedToken {
        token: True,
        position: Position {
            line: 1,
            column: 25,
        },
    },
    PositionedToken {
        token: ClosingCurlyBracket,
        position: Position {
            line: 1,
            column: 30,
        },
    },
]
