src/tests/if_expression/snapshots/monkey_interpreter__tests__if_expression__test_if_expression_case_5_environment.snap
---
source: src/tests/if_expression/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        variables: {},
        sub_environment: None,
    },
}
