src/tests/if_expression/snapshots/monkey_interpreter__tests__if_expression__test_if_expression_case_5_lexical_analysis.snap
---
source: src/tests/if_expression/mod.rs
assertion_line: 24
expression: tokens
---
[
    PositionedToken {
        token: If,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: OpeningRoundBracket,
        position: Position {
            line: 1,
            column: 4,
        },
    },
    PositionedToken {
        token: True,
        position: Position {
            line: 1,
            column: 5,
        },
    },
    PositionedToken {
        token: ClosingRoundBracket,
        position: Position {
            line: 1,
            column: 9,
        },
    },
    PositionedToken {
        token: OpeningCurlyBracket,
        position: Position {
            line: 1,
            column: 11,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 10,
        },
        position: Position {
            line: 1,
            column: 13,
        },
    },
    PositionedToken {
        token: ClosingCurlyBracket,
        position: Position {
            line: 1,
            column: 16,
        },
    },
]
