src/tests/if_expression/snapshots/monkey_interpreter__tests__if_expression__test_if_expression_case_5_syntax_analysis.snap
---
source: src/tests/if_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: If {
            condition: Boolean {
                boolean: True,
            },
            consequence: Block {
                nodes: [
                    Expression {
                        expression: Integer {
                            literal: 10,
                        },
                    },
                ],
            },
            alternative: None,
        },
    },
]
