src/tests/if_expression/snapshots/monkey_interpreter__tests__if_expression__test_if_expression_case_7_syntax_analysis.snap
---
source: src/tests/if_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: If {
            condition: Infix {
                left_hand: Integer {
                    literal: 1,
                },
                operator: GreaterThan,
                right_hand: Integer {
                    literal: 2,
                },
            },
            consequence: Block {
                nodes: [
                    Expression {
                        expression: Integer {
                            literal: 5,
                        },
                    },
                ],
            },
            alternative: None,
        },
    },
]
